# Dune_bot

./: .env.example  .gitignore  .vercelignore  README.md  app.py  docker-compose.yml  flask_app.py  help.txt  main.py  pyproject.toml  vercel.json
docs/: AI_CONTEXT.md
scripts/: check_vercel_webhook.py  get_webhook_info.py  set_webhook.py
src/: Dockerfile
src/app/: main.py  requirements.txt
src/app/api/: dev.py  health.py  telegram.py
src/app/schemas/: error.py  health.py
src/app/services/: bot_handlers.py  bot_service.py  dice_service.py  keyboard_service.py
src/app/static/: APP_DESCRIPTION.md  help.md
src/app/utils/: api_responses.py  env_config.py  health_check.py  logs.py  paths.py
tests/: dev_requirements.txt  test_api.py  test_dice_service.py  test_keyboard_service.py
