[project]
name = "dune-bot"
version = "0.1.0"
description = "FastAPI Telegram webhook service for Dune dice rolls."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.117.1",
    "uvicorn[standard]==0.35.0",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-telegram-bot==22.8",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

